# neptune-core

./: .drone.yml  .editorconfig  .gitattributes  .gitignore  .peer_sk  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  FORK_SYNC_WORKFLOW.md  Makefile  NEPTUNE_CLI_METHODS.md  README.md  WEIGHTED_TRANSITIONS_SUMMARY.md  alpine.Dockerfile  cliff.toml  compose.yaml  dist-workspace.toml  flake.nix  get-connected_peers.sh  get-head-hash.sh  install-bash-completions.sh  provoke-block-syncing-mode.sh  quality-audit-report.md  run-multiple-instances-advanced.sh  run-multiple-instances.sh  run-send.sh  run-single-instance.sh
cli/: Cargo.toml
dashboard/: Cargo.toml
dashboard/src/: address_screen.rs  dashboard_app.rs  main.rs  overview_screen.rs
neptune-archival-mmr/: Cargo.toml
neptune-archival-mmr/src/: lib.rs
neptune-archival-mutator-set/: Cargo.toml
neptune-archival-mutator-set/src/: archival_mutator_set.rs  lib.rs  ms_membership_proof_tests.rs  mutator_set_accumulator_tests.rs  rusty_archival_mutator_set.rs  test_shared.rs
neptune-archive/: Cargo.toml
neptune-archive/src/: archival_state.rs  archival_state_tests.rs  block_index.rs  import_blocks_from_files.rs  lib.rs  rusty_archival_block_mmr.rs  rusty_utxo_index.rs  shared.rs
neptune-archive/src/archival_state/: import_blocks_from_files.rs  rusty_utxo_index.rs
neptune-cli/: Cargo.toml  README.md
neptune-cli/src/: main.rs  parser.rs
neptune-cli/src/parser/: beneficiary.rs  (+1 more)
neptune-consensus/: Cargo.toml
neptune-consensus/benchmarks/: neptune_transaction_hash_removal_record_index_sets_1.json  tasm_neptune_coinbase_amount.json  tasm_neptune_mutator_set_get_swbf_indices_new.json
neptune-consensus/src/: consensus_rule_set.rs  lib.rs  macros.rs  network.rs  prelude.rs
neptune-consensus/test_data/: proof_servers.txt
neptune-core/: CHANGELOG.md  Cargo.toml  README.md
neptune-core-cli/: COMMANDS_REFERENCE.md  Cargo.toml  JSON_RPC_USAGE.md  MANUAL_TESTING_GUIDE.md  RPC_INTEGRATION_GUIDE.md  WALLET_INTEGRATION_TEST.md  test-rpc-endpoints.sh
neptune-core-cli/docs/: RPC_FLOW_DIAGRAM.md
neptune-core-cli/src/: command.rs  main.rs  parser.rs
neptune-core-cli/wix/: main.wxs
neptune-core/benches/: consensus.rs  db_dbtvec.rs  db_leveldb.rs  sync_atomic.rs
neptune-core/benchmarks/: CollectLockScripts-2in-2out.json  CollectLockScripts-4in-4out.json  CollectLockScripts.json  CollectTypeScripts-2in-2out.json  CollectTypeScripts-4in-4out.json  KernelToOutputs-2in-2out.json  KernelToOutputs-4in-4out.json  NativeCurrency-4in-4out.json  TimeLock-2in-2out.json  TimeLock-4in-4out.json  neptune_transaction_assert_rr_index_set_equality.json  neptune_transaction_hash_removal_record_index_sets_1.json  neptune_transaction_hash_removal_record_index_sets_2.json  removal_records_integrity.json  tasm_neptune_transaction_compute_commitment.json  tasm_neptune_transaction_hash_index_set.json  tasm_neptune_transaction_hash_utxo.json  tasm_neptune_transaction_removal_records_integrity.json  tasm_neptune_transaction_verify_aocl_membership.json
neptune-core/profiles/: CollectLockScripts-4in-4out.profile  CollectTypeScripts-2in-2out.profile  CollectTypeScripts-4in-4out.profile  KernelToOutputs-2in-2out.profile  KernelToOutputs-4in-4out.profile  NativeCurrency-4in-4out.profile  RemovalRecordsIntegrity-4in-4out.profile  TimeLock-2in-2out.profile  TimeLock-4in-4out.profile
neptune-core/proptest-regressions/: rpc_server.txt
neptune-core/src/: assertion_error_ids.md  bench_helpers.rs  connect_to_peers.rs  lib.rs  macros.rs  main.rs  main_loop.rs  mine_loop.rs  peer_loop.rs  prelude.rs  rpc_auth.rs  rpc_server.rs  tests.rs
neptune-core/test_data/: block_notify_dummy.bat  block_notify_dummy.py  block_notify_dummy.sh  precalculated_pow_solution.json  proof_servers.txt
neptune-core/tests/: README.md  coinbase_distributions.rs  consensus_rules_unchanged.rs  consolidate.rs  external_proving_process.rs  guesser_rewards.rs  pow_puzzle.rs  send_and_receive_basic.rs  sync_state.rs  update_mutator_set_own_tx.rs
neptune-core/wix/: main.wxs
neptune-dashboard/: Cargo.toml  README.md
neptune-dashboard/src/: address_screen.rs  dashboard_app.rs  dashboard_rpc_client.rs  history_screen.rs  main.rs  mempool_screen.rs  mock_rpc_client.rs  mod.rs  overview_screen.rs  peers_screen.rs  receive_screen.rs  scrollable_table.rs  send_screen.rs  utxos_screen.rs
neptune-dashboard/wix/: main.wxs
neptune-database/: Cargo.toml
neptune-database/src/: leveldb.rs  lib.rs
neptune-job-queue/: Cargo.toml
neptune-job-queue/src/: errors.rs  job_handle.rs  lib.rs  queue.rs
neptune-locks/: Cargo.toml
neptune-locks/src/: lib.rs
neptune-mempool/: Cargo.toml
neptune-mempool/src/: lib.rs  mempool.rs  mempool_update_job.rs  mempool_update_job_result.rs  merge_input_cache.rs  transaction_kernel_id.rs  transaction_proof_quality.rs  tx_upgrade_filter.rs  upgrade_incentive.rs  upgrade_priority.rs
neptune-mutator-set/: Cargo.toml
neptune-mutator-set/src/: active_window.rs  addition_record.rs  archival_mutator_set.rs  authenticated_item.rs  lib.rs  mmra_and_membership_proofs.rs  ms_membership_proof.rs  msa_and_records.rs  mutator_set_accumulator.rs  removal_record.rs  root_and_paths.rs  rusty_archival_mutator_set.rs  shared.rs  strategies.rs  test_shared.rs
neptune-p2p/: Cargo.toml
neptune-p2p/src/: block_proposal_notification.rs  lib.rs  peer.rs  synchronization_bit_mask.rs
neptune-primitives/: Cargo.toml
neptune-primitives/src/: announcement_flag.rs  block_height.rs  block_selector.rs  data_directory.rs  difficulty_control.rs  lib.rs  network.rs  timestamp.rs
neptune-rpc/api/: Cargo.toml
neptune-rpc/client/: Cargo.toml  README.md
neptune-rpc/macros/: Cargo.toml
neptune-wallet/: Cargo.toml
neptune-wallet/src/: change_policy.rs  coinbase_distribution.rs  composer_parameters.rs  expected_utxo.rs  fee_notification_policy.rs  incoming_utxo.rs  lib.rs  mock_block.rs  scan_mode_configuration.rs  secret_key_material.rs  transaction_details.rs  transaction_output.rs  unlocked_utxo.rs  utxo_notification.rs  wallet_entropy.rs  wallet_file.rs
(+1532 files in other folders)
