[workspace]
resolver="2"

members = [
    "neptune-core",
    "neptune-cli",
    "neptune-dashboard",
]


# `opt-level = 3` is needed because it otherwise takes too long to sign
# transaction with STARK proofs. The other flags are there to make compilation
# of Triton VM faster.
[profile.dev.package.triton-vm]
opt-level = 3
debug = false
incremental = false
debug-assertions = false
overflow-checks = false

[profile.release.package.triton-vm]
opt-level = 3
debug = false
incremental = false
debug-assertions = false
overflow-checks = false

[profile.bench.package.triton-vm]
opt-level = 3
debug = false
incremental = false
debug-assertions = false
overflow-checks = false

[profile.test.package.triton-vm]
opt-level = 3
debug = false
incremental = false
debug-assertions = false
overflow-checks = false

# Set to make compilation of Triton VM faster. Since it uses build scripts
# that should run with `opt-level=3` set.
[profile.test]
build-override.opt-level = 3
opt-level = 3                # Set to make execution of tests in this crate faster. Cf: https://github.com/Neptune-Crypto/neptune-core/issues/204

[profile.release]
build-override.opt-level = 3

[profile.bench]
build-override.opt-level = 3

[profile.dev]
build-override.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

