[package]
name = "neptune-cli"
description = "cli client for interfacing with neptune-core"
authors = ["Triton Software"]

version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

default-run = "neptune-cli"

[dependencies]

neptune-cash = { version = "0.1.2", path = "../" }
aead = { version = "0.5", features = ["std"] }
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
itertools = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tiny-bip39 = "1.0"
tokio = { version = "1.41", features = ["full", "tracing"] }
tokio-serde = { version = "0.8", features = ["bincode", "json"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
rand = "0.9.0"
regex = "1.11.1"

[dev-dependencies]


