[package]
name = "neptune-cli"
description = "cli client for interfacing with neptune-core"
authors = ["Triton Software"]

version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

default-run = "neptune-cli"

[dependencies]

neptune-cash = { version = "0.3.0", path = "../neptune-core" }
anyhow = { version = "1.0" }
tiny-bip39 = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
itertools = "0.11"
rand = "0.9"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio = { version = "1.41", features = ["full", "tracing"] }

[dev-dependencies]

[lints]
workspace = true