[package]
name = "neptune-consensus"
description = "Consensus logic and proof abstractions for Neptune Cash."
authors = ["Triton Software"]

version = "0.14.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]

# implements arbitrary::Arbitrary for various types
arbitrary-impls = [
    "dep:arbitrary",
    "dep:proptest",
    "dep:proptest-arbitrary-interop",
    "neptune-mutator-set/arbitrary-impls",
    "neptune-primitives/arbitrary-impls",
]

# exposes mock proof/data constructors used by the mock RPC layer.
mock-rpc = []

# defines and implements TritonProgramSpecification for various programs
spec = []

# exposes the consensus/proof-abstraction test-support constructors and proptest
# strategies (the `test_helpers` modules) needed by downstream crates' tests.
# off by default.
test-helpers = [
    "arbitrary-impls",
    "dep:clienter",
    "neptune-mutator-set/test-helpers",
    "neptune-primitives/test-helpers",
]

[dependencies]

# note: arbitrary, proptest, proptest-arbitrary-interop are duplicated in
# [dev-dependencies] because they are optional deps but required for unit tests.
# please ensure versions match in both sections.

anyhow = { version = "1.0", features = ["backtrace"] }
arbitrary = { version = "1.4.1", features = ["derive"], optional = true }
async-trait = "0.1.83"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
clienter = { version = "0.1.1", optional = true }
field_count = "0.1"
futures = "0.3"
get-size2 = { version = "0.7", features = ["derive"] }
itertools = "0.14"
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = "0.4"
num-traits = "0.2"
proptest = { version = "1.7", optional = true }
proptest-arbitrary-interop = { version = "0.1", optional = true }
rand = "0.9"
rayon = "1.10"
readonly = "0.2.12"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.2"
serde_json = "1.0"
strum = { version = "0.27.0", features = ["derive"] }
tasm-lib = "7.0.0"
thiserror = "1.0.65"
tokio = { version = "1.47", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"

neptune-job-queue = { version = "0.14.0", path = "../neptune-job-queue" }
neptune-mutator-set = { version = "0.14.0", path = "../neptune-mutator-set" }
neptune-primitives = { version = "0.14.0", path = "../neptune-primitives" }

[dev-dependencies]
# Unit tests in this crate need the optional arbitrary/proptest impls and the
# test-support constructors. Referencing this crate with the `test-helpers`
# feature (which enables `arbitrary-impls`) causes feature unification to turn
# those on for the crate-under-test when running `cargo test`.
neptune-consensus = { path = ".", features = ["test-helpers", "spec"] }

# enables neptune-mutator-set's `strategies` + `msa_and_records` test modules.
neptune-mutator-set = { version = "0.14.0", path = "../neptune-mutator-set", features = [
    "test-helpers",
] }

# enables `Network::arbitrary`/`all_networks` and the `Arbitrary` derives on the
# primitives-level types (Difficulty, ProofOfWork, BlockHeight) used by tests.
neptune-primitives = { version = "0.14.0", path = "../neptune-primitives", features = [
    "test-helpers",
] }

# note: arbitrary, proptest, proptest-arbitrary-interop are duplicated in
# [dev-dependencies] because they are optional deps but required for unit tests.
# please ensure versions match in both sections.

arbitrary = { version = "1.4.1", features = ["derive"] }
assert2 = "0.3"
bincode = "1.3"
clienter = "0.1.1"
divan = { version = "4.3.0", package = "codspeed-divan-compat" }
macro_rules_attr = "0.1.3"
num-traits = "0.2"
proptest = { version = "1.7" }
proptest-arbitrary-interop = { version = "0.1" }
rand = "0.9"
rand_distr = "0.5"
statrs = "0.18.0"
test-strategy = "0.3"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
tracing-test = "0.2"

[lints]
workspace = true
