[package]
name = "neptune-core-cli"
description = "cli client for interfacing with neptune-core"
authors = ["Triton Software"]

version = "0.6.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

default-run = "neptune-cli"

[package.metadata.wix]
upgrade-guid = "5ECA2948-A196-4183-A017-A470C2D00FF6"
path-guid = "F642EA18-96FF-421A-AE42-30190B67DCD1"
license = false
eula = false

[[bin]]
name = "neptune-cli"
path = "src/main.rs"

[dependencies]

neptune-cash = { version = "0.6.0", path = "../neptune-core" }
anyhow = { version = "1.0" }
tiny-bip39 = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
itertools = "0.14"
rand = "0.9"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio = { version = "1.41", features = ["full", "tracing"] }
bech32 = ">=0.9, <0.10"
libp2p = "0.56.0"

[dev-dependencies]
arbitrary = "1.4.2"
test-strategy = "0.4.3"
proptest = "1.7.0"
proptest-arbitrary-interop = "0.1.0"

[lints]
workspace = true
