[package]
name = "neptune-dashboard"
description = "neptune-cash tui dashboard and wallet"
authors = ["Triton Software"]

version = "0.5.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
default = []
mock = ["rand", "neptune-cash/mock-rpc"]

[dependencies]
anyhow = { version = "1.0" }
neptune-cash = { version = "0.5.0", path = "../neptune-core" }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
libp2p = { version = "0.56.0", features = ["autonat"] }
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio = { version = "1.41", features = ["full", "tracing"] }
ratatui = "0.30"
itertools = "0.11"
num-traits = "0.2"
unicode-width = "0.1"
strum = { version = "0.27.0", features = ["derive"] }
bytesize = "1.3"
tasm-lib = "2.0.0"
humantime = "2.1.0"
rand = { version = "0.9.2", optional = true }
multiaddr = "0.18.2"

[dev-dependencies]

[lints]
workspace = true
