[package]
name = "neptune-dashboard"
description = "neptune-cash tui dashboard and wallet"
authors = ["Triton Software"]

version = "0.6.0"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[package.metadata.wix]
upgrade-guid = "D7E23508-EDAB-4F38-BF78-453703CC6000"
path-guid = "6C6F906C-1841-4C62-8038-7CD40E2A66E1"
license = false
eula = false

[features]
default = []
mock = ["rand", "neptune-cash/mock-rpc"]

[dependencies]
anyhow = { version = "1.0" }
neptune-cash = { version = "0.6.0", path = "../neptune-core" }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
libp2p = { version = "0.56.0", features = ["autonat"] }
tarpc = { version = "^0.34", features = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
tokio = { version = "1.41", features = ["full", "tracing"] }
ratatui = "0.30"
itertools = "0.14"
num-traits = "0.2"
unicode-width = "0.1"
strum = { version = "0.27.0", features = ["derive"] }
bytesize = "1.3"
tasm-lib = "2.0.0"
humantime = "2.1.0"
rand = { version = "0.9.2", optional = true }
multiaddr = "0.18.2"

[dev-dependencies]

[lints]
workspace = true
