[package]
name = "neptune-locks"
description = "Simplified, instrumented read-write lock types used by neptune-cash"
authors = ["Triton Software"]

version = "0.14.2"
edition = "2021"
license = "Apache-2.0"

homepage = "https://neptune.cash/"
repository = "https://github.com/Neptune-Crypto/neptune-core/"

[features]
# locks::tokio support for tracking the location of lock acquisition.
# requires nightly. not generally useful by itself.
track-lock-location = []

# locks::tokio support for tracking the instant of lock acquisition.
# not generally useful by itself.
track-lock-time = []

[dependencies]
futures = "0.3"
tokio = { version = "1.47", features = ["sync", "macros", "rt", "time"] }
tracing = "0.1"

[dev-dependencies]
macro_rules_attr = "0.1.3"
tokio = { version = "1.47", features = ["rt-multi-thread"] }
tokio-test = "0.4"
tracing-test = "0.2"

[lints]
workspace = true
